# spine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  benchmark.md  contributing.md  index.md  install.md  quickstart.md
docs/concepts/: guards.md  hitl.md  kernel.md  middleware.md  observability.md  providers.md  state.md  tools.md
docs/deepdive/: eval.md  mcp.md
docs/develop/: backend.md  middleware.md  provider.md  publish.md
docs/guides/: deployment.md  eval.md  examples.md  guardrails.md  mcp.md  memory.md  models.md  orchestration.md  patterns.md
docs/reference/: api.md  cli.md  data-model.md  middleware.md  plugins.md
docs/stylesheets/: extra.css
overrides/: home.html
scripts/: benchmark.sh
