[project]
name = "spine-workspace"
version = "0"
description = "Spine monorepo workspace (dev tooling only; real packages live in packages/)."
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
spine-core = { workspace = true }
spine-providers = { workspace = true }
spine-cli = { workspace = true }
spine-otel = { workspace = true }
spine-middleware = { workspace = true }
spine-backends = { workspace = true }

[dependency-groups]
dev = [
    "spine-core",
    "spine-providers",
    "spine-cli",
    "spine-otel",
    "spine-middleware",
    "spine-backends",
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "packages/spine-core/src",
    "packages/spine-providers/src",
    "packages/spine-cli/src",
    "packages/spine-otel/src",
    "packages/spine-middleware/src",
    "packages/spine-backends/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer.Option/Argument in defaults is Typer's documented idiom, not a B008 bug.
"packages/spine-cli/src/spine_cli/app.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["spine_core", "spine_providers", "spine_cli", "spine_otel", "spine_middleware", "spine_backends"]
mypy_path = "packages/spine-core/src:packages/spine-providers/src:packages/spine-cli/src:packages/spine-otel/src:packages/spine-middleware/src:packages/spine-backends/src"

[[tool.mypy.overrides]]
module = ["anthropic.*", "opentelemetry.*"]
ignore_missing_imports = true
